packages/kit/test/apps/basics/src/routes/errors/endpoint-not-ok.json.js
/** @type {import('@sveltejs/kit').RequestHandler} */
export function GET() {
	return {
		status: 555
	};
}
